--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>hiro20v</groupId>
 	<artifactId>tsumugi</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>Tsumugi</name>
@@ -41,7 +41,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.4</version>
+				<version>3.6</version>
 				<configuration>
 					<locales>ja</locales>
 					<inputEncoding>UTF-8</inputEncoding>
@@ -51,7 +51,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-project-info-reports-plugin</artifactId>
-							<version>2.8</version>
+							<version>2.9</version>
 							<reportSets>
 								<reportSet>
 									<reports>
@@ -75,7 +75,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-javadoc-plugin</artifactId>
-							<version>2.10.3</version>
+							<version>3.0.0-M1</version>
 							<configuration>
 								<!-- JAVA_HOME、を設定する代わりに設定。 -->
 								<javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
@@ -84,7 +84,7 @@
 								<encoding>UTF-8</encoding>
 								<bottom>
 									<![CDATA[
-										Copyright &copy; 2015 hiro20v All Rights Reserved.
+										Copyright &copy; 2015-2017 hiro20v All Rights Reserved.
 									]]>
 								</bottom>
 							</configuration>
@@ -101,12 +101,12 @@
 						<plugin>
 							<groupId>org.codehaus.mojo</groupId>
 							<artifactId>findbugs-maven-plugin</artifactId>
-							<version>3.0.0</version>
+							<version>3.0.3</version>
 						</plugin>
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-surefire-report-plugin</artifactId>
-							<version>2.18.1</version>
+							<version>2.20.1</version>
 							<configuration>
 								<inputEncoding>UTF-8</inputEncoding>
 								<outputEncoding>UTF-8</outputEncoding>
@@ -130,7 +130,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-pmd-plugin</artifactId>
-							<version>3.5</version>
+							<version>3.8</version>
 							<configuration>
 								<targetJdk>${compileSource}</targetJdk>
 								<sourceEncoding>UTF-8</sourceEncoding>
@@ -139,15 +139,34 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-checkstyle-plugin</artifactId>
-							<version>2.16</version>
+							<version>2.17</version>
 						</plugin>
+
+
 						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>cobertura-maven-plugin</artifactId>
-							<version>2.7</version>
+							<groupId>org.jacoco</groupId>
+							<artifactId>jacoco-maven-plugin</artifactId>
+							<version>0.7.9</version>
 						</plugin>
 					</reportPlugins>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<propertyName>jacocoArgs</propertyName>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<pluginManagement>
@@ -156,8 +175,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.18.1</version>
+					<version>2.20.1</version>
 					<configuration>
+						<argLine>${jacocoArgs}</argLine>
 					</configuration>
 				</plugin>
 
